# woodwork_cad

./: LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml
output/: art_tote.md  board_test.md  box1.md  geometry_test.md  hex-box1-strips-overlap-mitre.md  hex-box1-strips.md  hex-box1.md  hex-box1a-strips-overlap-mitre.md  hex-box1a-strips.md  hex-box1a.md
projects/: art_tote.py  board_test.py  box1.py  geometry_test.py  hex-box1.py  hex_box1.py
projects/output/: geometry_test.md  hex-box1-strips-overlap-mitre.md  hex-box1.md
src/: art_tote.py  board_test.py  box1.py  geometry_test.py  hex-box1.py  hex-box1a.py
src/woodwork_cad/: __about__.py  assembly.py  board.py  cutlist.py  defects.py  dovetails.py  faces.py  geometry.py  grooves.py  operations.py  polygon.py  profile.py  shades.py  stock.py  svg.py
tests/: __init__.py
