[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woodwork-cad"
dynamic = ["version"]
description = 'Procedural cad for my woodwork projects.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Tom Paton", email = "tom.paton@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/tompaton/woodwork_cad#readme"
Issues = "https://github.com/tompaton/woodwork_cad/issues"
Source = "https://github.com/tompaton/woodwork_cad"

[tool.hatch.version]
path = "src/woodwork_cad/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/woodwork_cad tests}"

[tool.coverage.run]
source_pkgs = ["woodwork_cad", "tests"]
branch = true
parallel = true
omit = [
  "src/woodwork_cad/__about__.py",
]

[tool.coverage.paths]
woodwork_cad = ["src/woodwork_cad", "*/woodwork-cad/src/woodwork_cad"]
tests = ["tests", "*/woodwork-cad/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint.per-file-ignores]
"projects/*" = ["T201", "N806", "N803"]

[tool.hatch.scripts]
make = "make"
